# opengl

./: CMakeLists.txt  main.cpp
antongerdelan/: 1_hellotriangle.cpp  advanced_rainbow_triangle_main.cpp
glad/include/glad/: glad.h
glad/src/: glad.c
glad_old/include/glad/: glad.h
glad_old/src/: glad.c
glm/glm/: CMakeLists.txt
